<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appguarderia.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_config"
        android:name="com.example.appguarderia.ui.config.ConfigFragment"
        android:label="@string/menu_configuracion"
        tools:layout="@layout/fragment_config" />
    <fragment
        android:id="@+id/nav_contacto"
        android:name="com.example.appguarderia.ui.contacto.ContactoFragment"
        android:label="@string/menu_contactanos"
        tools:layout="@layout/fragment_contacto" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.appguarderia.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_centro"
        android:name="com.example.appguarderia.ui.centro.CentroFragment"
        android:label="@string/menu_mi_centro"
        tools:layout="@layout/fragment_centro" />
    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.appguarderia.ui.menu.MenuFragment"
        android:label="@string/menu_semanal"
        tools:layout="@layout/fragment_menu" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.appguarderia.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>